Fix JaCoCo reporting